--- a/Smart Calculator (Go)/2+2/task-info.yaml
+++ b/Smart Calculator (Go)/2+2/task-info.yaml
@@ -6,7 +6,13 @@ files:
   - name: tests.py
     visible: false
     learner_created: false
+  - name: internal/1/task.go
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/projects/278/stages/1408/implement#comment
 check_profile: hyperskill_go
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Wed, 10 Jul 2024 12:22:45 UTC"
 record: -1
