--- a/Smart Calculator (Go)/Count them all/task-info.yaml
+++ b/Smart Calculator (Go)/Count them all/task-info.yaml
@@ -8,5 +8,8 @@ files:
     learner_created: false
 feedback_link: https://hyperskill.org/projects/278/stages/1410/implement#comment
 check_profile: hyperskill_go
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Wed, 10 Jul 2024 12:38:27 UTC"
 record: -1
