--- a/Smart Calculator (Go)/2+2/task-info.yaml
+++ b/Smart Calculator (Go)/2+2/task-info.yaml
@@ -9,10 +9,7 @@ files:
   - name: internal/1/task.go
     visible: true
     learner_created: true
-feedback_link: https://hyperskill.org/projects/278/stages/1408/implement#comment
+feedback_link: https://hyperskill.org/learn/step/21959#comment
 check_profile: hyperskill_go
-status: Solved
-feedback:
-  message: <html>Correct solution</html>
-  time: "Wed, 10 Jul 2024 12:22:45 UTC"
+status: Failed
 record: 1
