--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,20 +3,20 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/26875/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Thu, 01 Jan 1970 00:00:00 UTC"
+update_date: "Thu, 11 Jul 2024 08:01:26 UTC"
 stages:
   - id: 1408
     step: 21959
     is_completed: true
   - id: 1409
     step: 21960
-    is_completed: false
+    is_completed: true
   - id: 1410
     step: 21961
-    is_completed: false
+    is_completed: true
   - id: 1411
     step: 21962
-    is_completed: false
+    is_completed: true
   - id: 1412
     step: 21963
     is_completed: false
