--- a/Smart Calculator (Go)/Error/task-info.yaml
+++ b/Smart Calculator (Go)/Error/task-info.yaml
@@ -7,7 +7,7 @@ files:
   - name: tests.py
     visible: false
     learner_created: false
-feedback_link: https://hyperskill.org/projects/278/stages/1412/implement#comment
+feedback_link: https://hyperskill.org/learn/step/21963#comment
 check_profile: hyperskill_go
 status: Unchecked
 record: -1
