--- a/Smart Calculator (Go)/Variables/task-info.yaml
+++ b/Smart Calculator (Go)/Variables/task-info.yaml
@@ -6,7 +6,7 @@ files:
   - name: tests.py
     visible: false
     learner_created: false
-feedback_link: https://hyperskill.org/projects/278/stages/1413/implement#comment
+feedback_link: https://hyperskill.org/learn/step/21964#comment
 check_profile: hyperskill_go
 status: Unchecked
 record: -1
