--- a/course-info.yaml
+++ b/course-info.yaml
@@ -10,4 +10,5 @@ summary: "<p>Calculators are a very helpful tool that we all use on a regular ba
 programming_language: Go
 content:
   - Smart Calculator (Go)
+  - Topics
 mode: Study
