[master] yaml files + gitignore (1)

--- a/Smart Calculator (Go)/2+2/task-info.yaml
+++ b/Smart Calculator (Go)/2+2/task-info.yaml
@@ -11,5 +11,5 @@ files:
     learner_created: true
 feedback_link: https://hyperskill.org/learn/step/21959#comment
 check_profile: hyperskill_go
-status: Failed
+status: Solved
 record: 1
