[master] 7/7 I've got the power
Description:

In the final stage, it remains to add operations: multiplication *, integer division / and parentheses (...). They have a higher priority than addition + and subtraction -.

Objectives:

1. Your program should support multiplication *, integer division / and parentheses (...). To do this, use infix to postfix conversion algorithm above and then calculate the result using stack.
2. Do not forget about variables; they, and the unary minus operator, should still work.
3. Modify the result of the /help command to explain all possible operators. You can write the output for the command in free form.
4. The program should not stop until the user enters the /exit command.
5. Note that a sequence of + (like +++ or +++++) is an admissible operator that should be interpreted as a single plus. A sequence of - (like -- or ---) is also an admissible operator and its meaning depends on the length. If a user enters a sequence of * or /, the program must print a message that the expression is invalid.

--- a/Smart Calculator (Go)/I've got the power/task-info.yaml
+++ b/Smart Calculator (Go)/I've got the power/task-info.yaml
@@ -8,5 +8,8 @@ files:
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/21965#comment
 check_profile: hyperskill_go
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Wed, 17 Jul 2024 11:15:32 UTC"
 record: -1
