--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/26875/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Tue, 16 Jul 2024 17:15:46 UTC"
+update_date: "Wed, 17 Jul 2024 11:28:46 UTC"
 stages:
   - id: 1408
     step: 21959
@@ -25,7 +25,7 @@ stages:
     is_completed: false
   - id: 1414
     step: 21965
-    is_completed: false
+    is_completed: true
 topics:
   0:
     - title: Introduction to Go
